# tuvi-battu-graphrag

./: .env.example  PROGRESS.md  README.md  SPECIFICATIONS.md  plan.md  specifications.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: clients.py  config.py  main.py
backend/tests/: test_health.py
data/ingested/BATU/: Bát Tự Hà Lạc.json  Dự Đoán Theo Tứ Trụ.json  Tử Vi Dịch Lý Phong Thủy Hà Lạc Bát Tự.json
data/ingested/TUVI/: Tử Vi Giảng Minh.json  Tử Vi Hàm Số.json  Tử Vi Khảo Luận.json  Tử Vi Nghiệm Lý, Lý Mệnh Học.json
docs/: README.md
frontend/: .env.example  .env.local  package-lock.json  package.json
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.html  _not-found.rsc  dashboard.html  dashboard.rsc  index.html  index.rsc  login.html  login.rsc  page.js  page_client-reference-manifest.js  (+2 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
infra/: .env.example
infra/neo4j/: schema.cypher
infra/supabase/: rls.sql  schema.sql  seed.sql
scripts/: apply_neo4j_schema.py  apply_supabase_schema.py  ingest_pdf.py
(+42 files in other folders)
